<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="app_name">YOLO</string>
	<string name="empty"></string>

    <!-- Notification Format -->
    <string name="isDriverNotification">Your child is driving a vehicle.</string>
    <string name="isPassengerNotification">Your child is a passenger of a moving vehicle.</string>
    
    <!-- Login/Account Items -->
    <string name="signIn">Sign In</string>
    <string name="signOut">Sign Out</string>
    <string name="submit">Submit</string>
    <string name="orText">Or</string>
    <string name="createAccount">Create Account</string>
    <string name="nameHint">Name</string>
    <string name="phoneHint">Phone</string>
    <string name="emailHint">Email</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="confirmPasswordHint">Confirm Password</string>

    <string name="emailVerified">VERIFIED</string>
    <string name="emailNotVerified">NOT VERIFIED</string>


     <!-- Errors -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_duplicate_email">This email address is already in use</string>
    <string name="error_duplicate_username">This username is already in use</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_confirm_password">Passwords do not match</string>
    <string name="error_field_required">This field is required</string>

    <!-- Activities -->

    <!-- Main -->
    <string name="passenger">Passenger</string>
    <string name="driving">Driver</string>

    <!-- Console -->
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="lock">Lock</string>
    <string name="edit">Rename</string>

    <!-- Child Actions -->
    <string name="add">Add Device</string>
    <string name="editNameHint">Child Name</string>

    <!-- Child Lock -->
    <string name="childPasswordHint">Set Child's Password</string>
    <string name="passwordExpiration">Password Expiration</string>

    <!-- Settings -->
        <!-- Headers -->
        <string name="notifications">Notifications</string>
        <string name="settingsHeadersFrequency">Reminder Frequency</string>
        <string name="settingsHeaderAccount">Account</string>

    <string name="receivePushNotifications">Push Notifications</string>
    <string name="receiveEmail">Email</string>
    <string name="receiveSMS">Text Message</string>
    <string name="accountPassword">*******</string>

    <!-- Update Account -->
    <string name="newPhoneHint">New Phone Number</string>
    <string name="newEmailHint">New Email</string>
    <string name="newPasswordHint">New Password</string>
    <string name="newConfirmPasswordHint">Confirm New Password</string>
    <string name="updateAccount">Update Account</string>
    <string name="deleteAccount">Delete Account</string>


</resources>