<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Match"
    android:fillViewport="true">

    <EditText
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/usernameHint"
        android:inputType="text"
        android:maxLength="15" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/phoneHint"
        android:inputType="phone" />

    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:maxLength="10" />

    <EditText
        android:id="@+id/passwordConfirm"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/confirmPasswordHint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/password"
        android:layout_below="@id/passwordConfirm"
        android:layout_marginTop="25dp"
        android:text="@string/createAccount" />

</RelativeLayout>