<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    style="@style/Match" >

    <EditText
        android:id="@+id/phone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/newPhoneHint"
        android:inputType="phone"
        />
        
    <EditText
        android:id="@+id/name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@id/phone"
        android:hint="@string/newPasswordHint"
        android:inputType="textPassword"
        android:maxLength="15" />

    <EditText
        android:id="@+id/confirm"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/name"
        android:layout_marginTop="50dp"
        android:hint="@string/newConfirmPasswordHint"
        android:inputType="textPassword"
        android:maxLength="15"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/confirm"
        android:layout_marginTop="50dp"
        android:hint="@string/newEmailHint"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/update_account_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/name"
        android:layout_below="@id/email"
        android:layout_marginTop="25dp"
        android:text="@string/updateAccount" />

    <Button
        android:id="@+id/delete_account_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/name"
        android:layout_below="@id/update_account_btn"
        android:layout_marginTop="25dp"
        android:text="@string/deleteAccount"
        android:background="@color/yolotheme_red"/>
 
</RelativeLayout>