<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/black"
    android:fillViewport="true"
    style="@style/Match" >
    
     <Switch
        android:id="@+id/receivePushNotification"
        android:checked="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/receivePushNotifications" />
        
    <Switch
        android:id="@+id/receiveEmail"
        android:checked="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/receivePushNotification"
        android:layout_marginBottom="40dp"
        android:text="@string/receiveEmail" />
        
   <Switch
        android:id="@+id/receiveSMS"
        android:checked="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/receiveEmail"
        android:layout_marginBottom="40dp"
        android:text="@string/receiveSMS" />
        
</RelativeLayout>