<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Match"
    android:fillViewport="true">

    <EditText
        android:id="@+id/password"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/childPasswordHint"
        android:inputType="text"
        android:maxLength="15" />

    <EditText
        android:id="@+id/confirm"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/confirmPasswordHint"
        android:inputType="text"
        android:maxLength="15" />

    <TextView
        android:id="@+id/slider_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/passwordExpiration"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/interval"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/slider_label"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="5 minutes"
        android:textSize="20sp" />

    <SeekBar
        android:id="@+id/expiration_slider"
        style="@style/SeekBarYoloTheme"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/interval"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:max="20"
        android:progress="0"
        android:secondaryProgress="0" />

    <Button
        android:id="@+id/lock_btn"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/confirm"
        android:layout_below="@id/expiration_slider"
        android:layout_marginTop="50dp"
        android:text="@string/lock" />

</RelativeLayout>