<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/back"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dip"
        android:tag="back">

        <ImageView
            android:id="@+id/delete"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_marginLeft="165dip"
            android:layout_marginRight="10dip"
            android:clickable="true"
            android:contentDescription="@string/delete"
            android:src="@drawable/ic_child_delete" />

        <ImageView
            android:id="@+id/edit"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_marginRight="10dip"
            android:clickable="true"
            android:contentDescription="@string/edit"
            android:src="@drawable/ic_child_edit" />

        <ImageView
            android:id="@+id/lock"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:clickable="true"
            android:contentDescription="@string/lock"
            android:src="@drawable/ic_child_lock" />

    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/front"
        style="@style/Match"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dip"
        android:tag="front">


        <ImageView
            android:id="@+id/list_image"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_action_add" />

        <!-- ID -->

        <TextView
            android:id="@+id/device_channel_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:visibility="gone" />

        <!-- Name Value -->

        <TextView
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/list_image"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/list_image"
            android:text="@string/app_name"
            android:textSize="24sp" />

    </RelativeLayout>

</FrameLayout>