<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dip">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/header_label"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/settingsHeaderAccount"
            android:textSize="24sp" />

    </RelativeLayout>

    <RelativeLayout
        style="@style/Wrap"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dip"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:background="@drawable/ic_account_username"
            android:contentDescription="@string/app_name" />

        <!-- Name Value -->

        <TextView
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/user_icon" />

    </RelativeLayout>

    <RelativeLayout
        style="@style/Wrap"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dip"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/password_icon"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:background="@drawable/ic_account_password"
            android:contentDescription="@string/app_name" />

        <!-- Name Value -->

        <TextView
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/password_icon"
            android:text="@string/accountPassword" />

    </RelativeLayout>

    <RelativeLayout
        style="@style/Wrap"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dip"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/phone_icon"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:background="@drawable/ic_action_add"
            android:contentDescription="@string/app_name" />

        <!-- Name Value -->

        <TextView
            android:id="@+id/phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/phone_icon" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/list_layout"
        style="@style/Wrap"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dip"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/email_icon"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:background="@drawable/ic_settings_email"
            android:contentDescription="@string/app_name" />

        <!-- ID -->

        <TextView
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp" />

    </RelativeLayout>

    <Button
        android:id="@+id/update_account"
        style="@style/ButtonYoloTheme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:text="@string/updateAccount" />
</LinearLayout>